--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@bitmovin/api-sdk": "^1.71.0",
-    "@react-native-community/datetimepicker": "^3.5.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^12.0.0",
+    "@react-native-firebase/firestore": "^12.0.0",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.5.1",
     "@takeoffmedia/react-native-bitmovin-player": "^0.1.30",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
@@ -28,15 +32,21 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-anchor-carousel": "^3.1.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.8.1",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "2.16.0",
     "react-native-video": "^5.1.1",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
