--- a/app.json
+++ b/app.json
@@ -17,14 +17,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.fliikamovies"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.youcefben47.fliikamovies"
+      "package": "com.fliikamovies"
     },
     "web": {
       "favicon": "./assets/favicon.png"
