--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,7 +189,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-                implementation 'com.bitmovin.player:player:2.57.1'
+    //implementation 'com.bitmovin.player:player:2.57.1'
 
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
