--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
+    "recyclerlistview": "^3.0.5",
     "redux": "^4.1.0",
     "redux-devtools": "^3.7.0",
     "redux-thunk": "^2.3.0"
