--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@sayem314/react-native-keep-awake": "^1.0.4",
     "@takeoffmedia/react-native-bitmovin-player": "0.1.37",
     "axios": "^0.21.1",
     "firebase": "^8.8.1",
