--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,7 +191,8 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     //implementation 'com.bitmovin.player:player:2.57.1'
 
-
+    implementation 'com.bitmovin.player:player:3.6.0'
+    implementation 'com.bitmovin.analytics:collector-bitmovin-player:2.1.0'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
