--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+source 'https://github.com/bitmovin/cocoapod-specs.git'
 
 platform :ios, '10.0'
 
@@ -7,8 +8,7 @@ target 'FliikaMobileRN' do
   config = use_native_modules!
 
 
-  source 'https://github.com/bitmovin/cocoapod-specs.git'
-  pod 'BitmovinPlayer', '2.57.1'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
@@ -18,7 +18,13 @@ target 'FliikaMobileRN' do
   pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
 
   pod 'react-native-keep-awake', :path => '../node_modules/@sayem314/react-native-keep-awake'
+  pod 'takeoffmedia-react-native-bitmovin-player', :path => '../node_modules/@takeoffmedia/react-native-bitmovin-player'
 
+  #pod 'takeoffmedia-react-native-bitmovin-player', :path => '../..'
+
+  pod 'BitmovinAnalyticsCollector/Core', git: 'https://github.com/bitmovin/bitmovin-analytics-collector-ios.git', tag: '1.20.0-beta2'
+  pod 'BitmovinAnalyticsCollector/BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-analytics-collector-ios.git', tag: '1.20.0-beta2'
+  pod 'BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git', tag:'2.66.0'
   target 'FliikaMobileRNTests' do
     inherit! :complete
     # Pods for testing
