--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@sayem314/react-native-keep-awake": "^1.0.4",
-    "@takeoffmedia/react-native-bitmovin-player": "0.1.37",
+    "@takeoffmedia/react-native-bitmovin-player": "^0.1.53",
     "axios": "^0.21.1",
     "firebase": "8.8.1",
     "global": "^4.4.0",
