--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.64.2",
     "react-native-anchor-carousel": "3.1.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-orientation": "^3.1.3",
