--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@sayem314/react-native-keep-awake": "^1.0.4",
-    "@takeoffmedia/react-native-bitmovin-player": "^0.2.0",
+    "@takeoffmedia/react-native-bitmovin-player": "^0.2.1",
     "axios": "^0.21.1",
     "firebase": "8.8.1",
     "global": "^4.4.0",
@@ -29,6 +29,7 @@
     "react-native": "0.64.2",
     "react-native-anchor-carousel": "3.1.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-config": "^1.4.5",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
