--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@sayem314/react-native-keep-awake": "^1.0.4",
-    "@takeoffmedia/react-native-bitmovin-player": "^0.2.2",
+    "@takeoffmedia/react-native-bitmovin-player": "^0.2.3",
     "axios": "^0.21.1",
     "firebase": "8.8.1",
     "global": "^4.4.0",
@@ -41,6 +41,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
+    "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
