--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/firestore": "^12.4.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "5.12.9",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
