Added My watch list screen and link in drawer

--- a/ios/FliikaMobileRN/Info.plist
+++ b/ios/FliikaMobileRN/Info.plist
@@ -14,6 +14,7 @@
 		<string>Feather.ttf</string>
 		<string>MaterialIcons.ttf</string>
 		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
 		<string>FontAwesome5_Regular.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
 		<string>CourierPrime-Bold.ttf</string>
