--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-anchor-carousel": "3.1.2",
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.5",
+    "react-native-drop-shadow": "^0.0.4",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
