--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^8.1.0",
