--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,7 +190,12 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    // implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation ("androidx.appcompat:appcompat:1.3.1") {
+        version {
+            strictly '1.3.1'
+        }
+    }
     //implementation 'com.bitmovin.player:player:2.57.1'
 
     implementation 'com.bitmovin.player:player:3.6.0'
