--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^2.16.0",
+    "react-native-theoplayer": "^1.2.0",
     "react-native-toast-message": "^2.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.2.0",
