--- a/ios/FliikaMobileRN/Info.plist
+++ b/ios/FliikaMobileRN/Info.plist
@@ -8,15 +8,22 @@
 	<string>https://stagev2-app-assets.britbox.takeoffmedia.com/player/poc/js/bitmovinplayer-ui.min.js</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>MaterialCommunityIcons.ttf</string>
-		<string>FontAwesome5_Brands.ttf</string>
-		<string>Ionicons.ttf</string>
-		<string>Feather.ttf</string>
-		<string>MaterialIcons.ttf</string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
 		<string>FontAwesome5_Regular.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>Fontisto.ttf</string>
 		<string>CourierPrime-Bold.ttf</string>
 		<string>CourierPrime-BoldItalic.ttf</string>
 		<string>CourierPrime-Italic.ttf</string>
@@ -82,7 +89,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -99,5 +106,7 @@
 	<false/>
 	<key>BitmovinPlayerLicenseKey</key>
 	<string>72fc96e3-318b-452f-91c7-bed54f199dd1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To scan cards</string>
 </dict>
 </plist>
