--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-tab-view": "^2.16.0",
     "react-native-theoplayer": "^1.3.0",
     "react-native-toast-message": "^2.1.1",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.2.0",
     "react-redux": "^7.2.4",
