--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-device-info": "^10.0.2",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-element-dropdown": "^2.1.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
