--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.2.0",
+    "react-native-webview": "^11.23.1",
     "react-redux": "^7.2.4",
     "recyclerlistview": "^3.0.5",
     "redux": "^4.1.0",
