--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "firebase": "8.8.1",
     "flutterwave-react-native": "^1.0.2",
     "global": "^4.4.0",
+    "i18next": "^21.9.2",
     "moment": "^2.29.1",
     "react": "17.0.1",
+    "react-i18next": "^11.18.6",
     "react-native": "0.64.2",
     "react-native-anchor-carousel": "3.1.2",
     "react-native-animatable": "^1.3.3",
@@ -40,6 +42,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^2.2.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-paper": "^4.9.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
