--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,7 @@ target 'FliikaMobileRN' do
   pod 'BitmovinAnalyticsCollector/Core', git: 'https://github.com/bitmovin/bitmovin-analytics-collector-ios.git', tag: '1.20.0-beta2'
   pod 'BitmovinAnalyticsCollector/BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-analytics-collector-ios.git', tag: '1.20.0-beta2'
   pod 'BitmovinPlayer', git: 'https://github.com/bitmovin/bitmovin-player-ios-sdk-cocoapod.git', tag:'2.66.0'
+  pod 'THEOplayerSDK-basic', '4.1.0'
   target 'FliikaMobileRNTests' do
     inherit! :complete
     # Pods for testing
